; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/psp/extr_emu.c_pemu_sound_wait.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/psp/extr_emu.c_pemu_sound_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sound_thread_exit = common dso_local global i32 0, align 4
@samples_made = common dso_local global i32 0, align 4
@samples_done = common dso_local global i32 0, align 4
@samples_block = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pemu_sound_wait() #0 {
  br label %1

1:                                                ; preds = %13, %0
  %2 = load i32, i32* @sound_thread_exit, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %11, label %4

4:                                                ; preds = %1
  %5 = load i32, i32* @samples_made, align 4
  %6 = load i32, i32* @samples_done, align 4
  %7 = sub nsw i32 %5, %6
  %8 = load i32, i32* @samples_block, align 4
  %9 = mul nsw i32 %8, 4
  %10 = icmp sgt i32 %7, %9
  br label %11

11:                                               ; preds = %4, %1
  %12 = phi i1 [ false, %1 ], [ %10, %4 ]
  br i1 %12, label %13, label %15

13:                                               ; preds = %11
  %14 = call i32 @psp_msleep(i32 10)
  br label %1

15:                                               ; preds = %11
  ret void
}

declare dso_local i32 @psp_msleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
